/*
 *
 * Copyright 2023 Gravitational, Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 * /
 */

package services

import (
	"context"

	"github.com/gravitational/teleport/api/gen/proto/go/userpreferences/v1"
)

// UserPreferences is the interface for managing user preferences.
type UserPreferences interface {
	// GetUserPreferences returns the user preferences for a given user.
	GetUserPreferences(ctx context.Context, req *userpreferencesv1.GetUserPreferencesRequest) (*userpreferencesv1.UserPreferences, error)

	// UpdateUserPreferences updates the user preferences for the given user.
	UpdateUserPreferences(ctx context.Context, req *userpreferencesv1.UpdateUserPreferencesRequest) error
}
